Fixed: too many crystals particles can get added when falling onto the floor of the beaker
Salt particles land on the bottom (no stacking or bumping into each other), then when any water enters the system, go to clump form.
Fixed: If you empty out some solution or remove the solute after you reach the limit, and the salt shaker refills, it adds more salt to the solution on its own.
Limited the amount of water that can be added to the system to be 1.5L
Fixed: the top faucet is not showing a continuous stream of water as you move the slider to the right
Moved the conductivity tester probes down a bit to encourage the user to dip them in the water without dipping the light bulb in the water too
Added credits
Fixed: Can't evaporate all the water
Limited salt and sugar amounts to 500g each
Made salt and sugar grains each mass of 5g
Made salt grains smaller than sugar grains
Started modeling Solution instead of Water
Made the solute appear as a rectangle taking up the full width of the beaker
# 0.00.14 (52087) May 18, 2011
Added collisions between the crystals and the beaker side walls
Made the clump grow faster so it matches with the displaced volume look as a linear function of the L/mole precipitate so sugar grows faster than salt (per mole)
Keep track of how many moles of crystal are in the air, since we need to prevent user from adding more than 10 moles to the system
Fixed: displaced volume isn't used for collision testing
Fixed: incorrect image for sugar dispenser when sugar is depleted
Show empty dispensers when user has already used the max amount of solute
Fixed: When a solute has 10 moles in the system, its dispenser shouldn't emit any more solute
Merged IntroModel with SugarAndSaltSolutionModel
Fixed: Water can overflow the beaker when solutes precipitate and you add water from the top faucet
Fixed: Crystals don't dissolve at the true top of the water (accounting for solid precipitate displacement)